--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="app">
         <div class="settings">
-            <input type="password" id="api-key" placeholder="Please Input Gemini API Key" />
+            <input type="password" id="api-key" placeholder="请输入Gemini 2.0 API-KEY" />
             <button id="config-toggle" class="material-symbols-outlined">settings</button>
         </div>
         <div id="config-container" class="hidden-mobile">
